--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@typescript-eslint/parser": "^4.15.0",
     "eslint": "^7.19.0",
     "prettier": "^2.2.1",
+    "react-error-overlay": "^6.0.9",
     "typescript": "4.1.3"
   },
   "scripts": {
