--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/history": "^4.7.3",
     "@types/jest": "^29.2.3",
     "@types/node": "^18.11.9",
     "@types/react": "^17.0.52",
