--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-burger",
   "version": "0.1.0",
+  "homepage": "https://MilaSergeeva.github.io/react-burger",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
@@ -43,6 +44,7 @@
     "eslint": "^7.19.0",
     "eslint-plugin-cypress": "^2.12.1",
     "fetch-mock": "^9.11.0",
+    "gh-pages": "^5.0.0",
     "jest": "^29.3.1",
     "jest-watch-typeahead": "^0.6.5",
     "prettier": "^2.2.1",
@@ -52,6 +54,8 @@
     "typescript": "^4.9.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
